--- a/hello-react/07_src_路由的基本使用/App.css
+++ b/hello-react/07_src_路由的基本使用/App.css
@@ -41,7 +41,7 @@
   color: white;
   background-color: rgb(164, 198, 199);
 }
-.app-wrapper .app-body .nav .nav-item.native {
+.app-wrapper .app-body .nav .nav-item.active-style {
   background-color: cadetblue;
   color: white;
 }
@@ -50,6 +50,8 @@
 }
 .app-wrapper .app-body .content {
   margin-left: 30px;
-  background-color: wheat;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   flex: 1;
 }
